tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,19): error TS2345: Argument of type '([文字, 为真] | [文字, 0])[]' is not assignable to parameter of type 'Iterable<[文字, 真假]>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => IterableIterator<[文字, 为真] | [文字, 0]>' is not assignable to type '() => Iterator<[文字, 真假]>'.
      Type 'IterableIterator<[文字, 为真] | [文字, 0]>' is not assignable to type 'Iterator<[文字, 真假]>'.
        Types of property 'next' are incompatible.
          Type '(value?: 任意) => IteratorResult<[文字, 为真] | [文字, 0]>' is not assignable to type '(value?: 任意) => IteratorResult<[文字, 真假]>'.
            Type 'IteratorResult<[文字, 为真] | [文字, 0]>' is not assignable to type 'IteratorResult<[文字, 真假]>'.
              Type '[文字, 为真] | [文字, 0]' is not assignable to type '[文字, 真假]'.
                Type '[文字, 0]' is not assignable to type '[文字, 真假]'.
                  Type '0' is not assignable to type '真假'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '([文字, 为真] | [文字, 0])[]' is not assignable to parameter of type 'Iterable<[文字, 真假]>'.
!!! error TS2345:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2345:     Type '() => IterableIterator<[文字, 为真] | [文字, 0]>' is not assignable to type '() => Iterator<[文字, 真假]>'.
!!! error TS2345:       Type 'IterableIterator<[文字, 为真] | [文字, 0]>' is not assignable to type 'Iterator<[文字, 真假]>'.
!!! error TS2345:         Types of property 'next' are incompatible.
!!! error TS2345:           Type '(value?: 任意) => IteratorResult<[文字, 为真] | [文字, 0]>' is not assignable to type '(value?: 任意) => IteratorResult<[文字, 真假]>'.
!!! error TS2345:             Type 'IteratorResult<[文字, 为真] | [文字, 0]>' is not assignable to type 'IteratorResult<[文字, 真假]>'.
!!! error TS2345:               Type '[文字, 为真] | [文字, 0]' is not assignable to type '[文字, 真假]'.
!!! error TS2345:                 Type '[文字, 0]' is not assignable to type '[文字, 真假]'.
!!! error TS2345:                   Type '0' is not assignable to type '真假'.
    for (var [k, v] of map) {
        k;
        v;
    }